--- a/android/KTCSdkDemo/bin/AndroidManifest.xml
+++ b/android/KTCSdkDemo/bin/AndroidManifest.xml
@@ -87,6 +87,8 @@
         </receiver>
         <receiver android:name="com.yzx.service.MsgBackReceiver" >
         </receiver>
+        <receiver android:name="com.yzx.service.RtppReceiver" >
+        </receiver>
     </application>
 
 </manifest>
