--- a/android/KTCSdkDemo/.project
+++ b/android/KTCSdkDemo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>KTCSdkDemo</name>
+	<name>flyRTC</name>
 	<comment></comment>
 	<projects>
 	</projects>
