--- a/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
+++ b/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
@@ -23,9 +23,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3</string>
+	<string>1.6</string>
 	<key>CFBundleVersion</key>
-	<string>01</string>
+	<string>03</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -44,6 +44,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
+		<string>voip</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
