--- a/android/flyRTC/app/src/main/AndroidManifest.xml
+++ b/android/flyRTC/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         <activity
             android:name=".ui.VideoCallActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleInstance">
+            android:launchMode="singleTask">
         </activity>
 
         <service android:name="com.yzx.service.ConnectionControllerService">
