--- a/android/flyRTC/app/src/main/AndroidManifest.xml
+++ b/android/flyRTC/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
+            android:name=".ui.CodecActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
             android:name=".ui.VideoCallActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask">
