--- a/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
+++ b/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.9</string>
+	<string>2.3</string>
 	<key>CFBundleVersion</key>
 	<string>01</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -47,7 +47,7 @@
 		<string>voip</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
-	<true/>
+	<false/>
 	<key>UIMainStoryboardFile</key>
 	<string></string>
 	<key>UIRequiredDeviceCapabilities</key>
