--- a/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
+++ b/ios/KCT_VOIP_Demo/KCT_VOIP_Demo/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.3</string>
+	<string>2.4</string>
 	<key>CFBundleVersion</key>
 	<string>01</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -34,13 +34,13 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>cameraDesciption</string>
+	<string>需要打开相机进行视频通话,是否允许此App使用你的相机?</string>
 	<key>NSContactsUsageDescription</key>
 	<string>contactsDesciption</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Yes</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>microphoneDesciption</string>
+	<string>需要打开麦克风进行视频通话,是否允许此App使用你的麦克风?</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
