--- a/android/flyRTC/app/build.gradle
+++ b/android/flyRTC/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    buildToolsVersion "27.0.3"
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.kct.flyrtc"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
-        versionName "1.3"
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     sourceSets {
@@ -29,14 +29,14 @@ android {
             dirs 'libs'
         }
     }
+}
 
-    dependencies {
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-            exclude group: 'com.android.support', module: 'support-annotations'
-        })
-        compile(name: 'sdk-debug', ext: 'aar')
-        compile 'com.android.support:appcompat-v7:26.1.0'
-        testCompile 'junit:junit:4.12'
-    }
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    implementation(name: 'sdk-debug', ext: 'aar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
 }
